<resources>
    <string name="app_name">MeteoApp</string>
    <string name="button">Button</string>
    <string name="hint">hint</string>
    <string name="textView">text</string>
    <string name="text">2</string>
    <string name="_1">1</string>
    <string name="autocompletetextview">cerca</string>
    <string name="textview">meteo</string>
    <string name="City">City</string>
    <string name="b">Button</string>
    <string name="search">search</string>
    <string name="aggiungi_ai_preferiti">Aggiungi ai preferiti</string>
    <string name="sgdgd">sgdgd</string>
    <string name="meteo">meteo</string>
    <string name="data_ora">data/ora</string>
    <string name="DEL">Button</string>
    <string name="del">DEL</string>

    <string name="delete">Button</string>
    <string name="elimina">Elimina</string>
    <string name="cancella_tutti">cancella tutti</string>
    <string name="posizione">posizione</string>
    <string name="inserisci_il_nome_della_citt">inserisci il nome della città</string>
    <string name="prossimi_5_giorni">Prossimi 5 giorni</string>
    <string name="rileva_meteo_ora">rileva meteo ora</string>
    <string name="la_tua_posizione">la tua posizione</string>
</resources>
