<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/resut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:padding="8dp"
        android:textColor="#FF000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b" />

    <AutoCompleteTextView
        android:id="@+id/Ab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inserisci_il_nome_della_citt"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/posizione"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/compass"
        android:onClick="posizione"
        android:text="@string/la_tua_posizione"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Ab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <Button
        android:id="@+id/b"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:onClick="next"
        android:text="@string/prossimi_5_giorni"
        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ab"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:onClick="search"

        android:text="@string/rileva_meteo_ora"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/b"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ab" />

    <Button
        android:id="@+id/StarButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/star"
        android:onClick="addPreferiti"
        android:text="@string/aggiungi_ai_preferiti"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Ab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />
</androidx.constraintlayout.widget.ConstraintLayout>